This file describes what was changed in the supervisor:
 * First -spec and -type annotations were added.
 * Some minor bugs found with this were corrected:
   - In the function clause of update_childspec/2 handling simple supervisor
     properly handle the error for valid childspec but with wrong number of
     entries.
 * Add support for callback module state.
 * Added handle_exit/3 callback.
 * Added handle_info/2 callback.
 * Added handle_call/3 callback.
 * Added handle_cast/2 callback.
 * Added terminate/2 callback. Different semantics than gen_server callback:
   Return value is either kill or nokill, nokill means the callback took care
   of killing the children, kill means the behaviour should handle that.
 * Added untested code_change/4 callback (DETAILS WILL CHANGE):
   code_change(OldVsn, Args, OldState, Extra)
 * New exported functions (analogous to the functions in gen_server):
   call/2,3
   cast/2
   abcast/2,3
   multi_call/2,3,4
   reply/2

This is based on the supervisor module from R13B-0 stdlib.

TODO:
 * New callbacks:
   code_change/4
 * Fix all throw(todo).
 * Fix all FIXME, TODO and so on.